--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to nginx-sarjan</title>
+<title>Welcome to nginx-hello</title>
 <style>
 html { color-scheme: light dark; }
 body { width: 35em; margin: 0 auto;
